ide/idea/src/main/gen/net/endlos/xdt99/xas99/parser/Xas99Parser.java
// This is a generated file. Not intended for manual editing.
package net.endlos.xdt99.xas99.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static net.endlos.xdt99.xas99.psi.Xas99Types.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class Xas99Parser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, null);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return xas99File(b, l + 1);
  }

  /* ********************************************************** */
  // DIR_RA args_dir_E
  public static boolean alias_definition(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "alias_definition")) return false;
    if (!nextTokenIs(b, DIR_RA)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, ALIAS_DEFINITION, null);
    r = consumeToken(b, DIR_RA);
    p = r; // pin = 1
    r = r && args_dir_E(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // opGA OP_SEP opGA
  public static boolean args_I(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "args_I")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, ARGS_I, "<args i>");
    r = opGA(b, l + 1);
    r = r && consumeToken(b, OP_SEP);
    p = r; // pin = OP_SEP
    r = r && opGA(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // expr
  public static boolean args_II(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "args_II")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ARGS_II, "<args ii>");
    r = expr(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // opGA OP_SEP opRegister
  public static boolean args_III(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "args_III")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, ARGS_III, "<args iii>");
    r = opGA(b, l + 1);
    r = r && consumeToken(b, OP_SEP);
    p = r; // pin = OP_SEP
    r = r && opRegister(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // opGA OP_SEP opValue
  public static boolean args_IV(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "args_IV")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, ARGS_IV, "<args iv>");
    r = opGA(b, l + 1);
    r = r && consumeToken(b, OP_SEP);
    p = r; // pin = OP_SEP
    r = r && opValue(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // opGA OP_SEP opRegister
  public static boolean args_IX(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "args_IX")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, ARGS_IX, "<args ix>");
    r = opGA(b, l + 1);
    r = r && consumeToken(b, OP_SEP);
    p = r; // pin = OP_SEP
    r = r && opRegister(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // opGA OP_SEP opValue
  public static boolean args_IX_X(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "args_IX_X")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, ARGS_IX_X, "<args ix x>");
    r = opGA(b, l + 1);
    r = r && consumeToken(b, OP_SEP);
    p = r; // pin = OP_SEP
    r = r && opValue(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // opRegister OP_SEP (opValue | REGISTER0)
  public static boolean args_V(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "args_V")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, ARGS_V, "<args v>");
    r = opRegister(b, l + 1);
    r = r && consumeToken(b, OP_SEP);
    p = r; // pin = OP_SEP
    r = r && args_V_2(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // opValue | REGISTER0
  private static boolean args_V_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "args_V_2")) return false;
    boolean r;
    r = opValue(b, l + 1);
    if (!r) r = consumeToken(b, REGISTER0);
    return r;
  }

  /* ********************************************************** */
  // opGA
  public static boolean args_VI(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "args_VI")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ARGS_VI, "<args vi>");
    r = opGA(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // opRegister OP_SEP opValue
  public static boolean args_VIII(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "args_VIII")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, ARGS_VIII, "<args viii>");
    r = opRegister(b, l + 1);
    r = r && consumeToken(b, OP_SEP);
    p = r; // pin = OP_SEP
    r = r && opValue(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // opValue
  public static boolean args_VIII_I(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "args_VIII_I")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ARGS_VIII_I, "<args viii i>");
    r = opValue(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // opRegister
  public static boolean args_VIII_R(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "args_VIII_R")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ARGS_VIII_R, "<args viii r>");
    r = opRegister(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // args_I
  public static boolean args_adv_I(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "args_adv_I")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ARGS_ADV_I, "<args adv i>");
    r = args_I(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // args_IV
  public static boolean args_adv_IV(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "args_adv_IV")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ARGS_ADV_IV, "<args adv iv>");
    r = args_IV(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // opGA OP_SEP (opGA | opValue)
  public static boolean args_adv_Ia(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "args_adv_Ia")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, ARGS_ADV_IA, "<args adv ia>");
    r = opGA(b, l + 1);
    r = r && consumeToken(b, OP_SEP);
    p = r; // pin = OP_SEP
    r = r && args_adv_Ia_2(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // opGA | opValue
  private static boolean args_adv_Ia_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "args_adv_Ia_2")) return false;
    boolean r;
    r = opGA(b, l + 1);
    if (!r) r = opValue(b, l + 1);
    return r;
  }

  /* ********************************************************** */
  // args_VI
  public static boolean args_adv_VI(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "args_adv_VI")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ARGS_ADV_VI, "<args adv vi>");
    r = args_VI(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // args_VIII
  public static boolean args_adv_VIII(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "args_adv_VIII")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ARGS_ADV_VIII, "<args adv viii>");
    r = args_VIII(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // opFilename
  public static boolean args_dir_C(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "args_dir_C")) return false;
    if (!nextTokenIs(b, OP_FQUOTE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = opFilename(b, l + 1);
    exit_section_(b, m, ARGS_DIR_C, r);
    return r;
  }

  /* ********************************************************** */
  // expr
  public static boolean args_dir_E(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "args_dir_E")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ARGS_DIR_E, "<args dir e>");
    r = expr(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // expr?
  public static boolean args_dir_EO(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "args_dir_EO")) return false;
    Marker m = enter_section_(b, l, _NONE_, ARGS_DIR_EO, "<args dir eo>");
    expr(b, l + 1);
    exit_section_(b, l, m, true, false, null);
    return true;
  }

  /* ********************************************************** */
  // expr (OP_SEP expr)*
  public static boolean args_dir_ES(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "args_dir_ES")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ARGS_DIR_ES, "<args dir es>");
    r = expr(b, l + 1);
    r = r && args_dir_ES_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (OP_SEP expr)*
  private static boolean args_dir_ES_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "args_dir_ES_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!args_dir_ES_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "args_dir_ES_1", c)) break;
    }
    return true;
  }

  // OP_SEP expr
  private static boolean args_dir_ES_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "args_dir_ES_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, OP_SEP);
    r = r && expr(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // expr OP_SEP expr? |
  //     OP_SEP expr
  public static boolean args_dir_EV(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "args_dir_EV")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ARGS_DIR_EV, "<args dir ev>");
    r = args_dir_EV_0(b, l + 1);
    if (!r) r = args_dir_EV_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // expr OP_SEP expr?
  private static boolean args_dir_EV_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "args_dir_EV_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = expr(b, l + 1);
    r = r && consumeToken(b, OP_SEP);
    r = r && args_dir_EV_0_2(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // expr?
  private static boolean args_dir_EV_0_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "args_dir_EV_0_2")) return false;
    expr(b, l + 1);
    return true;
  }

  // OP_SEP expr
  private static boolean args_dir_EV_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "args_dir_EV_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, OP_SEP);
    r = r && expr(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // opFloat
  public static boolean args_dir_F(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "args_dir_F")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ARGS_DIR_F, "<args dir f>");
    r = opFloat(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // (opLabel (OP_SEP opLabel)*)?
  public static boolean args_dir_L(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "args_dir_L")) return false;
    Marker m = enter_section_(b, l, _NONE_, ARGS_DIR_L, "<args dir l>");
    args_dir_L_0(b, l + 1);
    exit_section_(b, l, m, true, false, null);
    return true;
  }

  // opLabel (OP_SEP opLabel)*
  private static boolean args_dir_L_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "args_dir_L_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = opLabel(b, l + 1);
    r = r && args_dir_L_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (OP_SEP opLabel)*
  private static boolean args_dir_L_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "args_dir_L_0_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!args_dir_L_0_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "args_dir_L_0_1", c)) break;
    }
    return true;
  }

  // OP_SEP opLabel
  private static boolean args_dir_L_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "args_dir_L_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, OP_SEP);
    r = r && opLabel(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // labeldef (OP_SEP labeldef)*
  public static boolean args_dir_R(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "args_dir_R")) return false;
    if (!nextTokenIs(b, IDENT)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = labeldef(b, l + 1);
    r = r && args_dir_R_1(b, l + 1);
    exit_section_(b, m, ARGS_DIR_R, r);
    return r;
  }

  // (OP_SEP labeldef)*
  private static boolean args_dir_R_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "args_dir_R_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!args_dir_R_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "args_dir_R_1", c)) break;
    }
    return true;
  }

  // OP_SEP labeldef
  private static boolean args_dir_R_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "args_dir_R_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, OP_SEP);
    r = r && labeldef(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // opText
  public static boolean args_dir_S(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "args_dir_S")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ARGS_DIR_S, "<args dir s>");
    r = opText(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // opText (OP_SEP opText)*
  public static boolean args_dir_T(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "args_dir_T")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ARGS_DIR_T, "<args dir t>");
    r = opText(b, l + 1);
    r = r && args_dir_T_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (OP_SEP opText)*
  private static boolean args_dir_T_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "args_dir_T_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!args_dir_T_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "args_dir_T_1", c)) break;
    }
    return true;
  }

  // OP_SEP opText
  private static boolean args_dir_T_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "args_dir_T_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, OP_SEP);
    r = r && opText(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // opAddress | INT | (OP_QUOTE TEXT? OP_QUOTE) | MOD_LEN opLabel
  static boolean atom(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, null, "<value>");
    r = opAddress(b, l + 1);
    if (!r) r = consumeToken(b, INT);
    if (!r) r = atom_2(b, l + 1);
    if (!r) r = atom_3(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // OP_QUOTE TEXT? OP_QUOTE
  private static boolean atom_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom_2")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, OP_QUOTE);
    r = r && atom_2_1(b, l + 1);
    r = r && consumeToken(b, OP_QUOTE);
    exit_section_(b, m, null, r);
    return r;
  }

  // TEXT?
  private static boolean atom_2_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom_2_1")) return false;
    consumeToken(b, TEXT);
    return true;
  }

  // MOD_LEN opLabel
  private static boolean atom_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom_3")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, MOD_LEN);
    r = r && opLabel(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // DIR_L args_dir_L |
  //     DIR_E args_dir_E |
  //     DIR_EO args_dir_EO |
  //     DIR_ES args_dir_ES |
  //     DIR_EV args_dir_EV |
  //     DIR_T args_dir_T |
  //     DIR_S args_dir_S |
  //     DIR_C args_dir_C |
  //     DIR_O |
  //     DIR_X |
  //     DIR_F args_dir_F |
  //     DIR_R args_dir_R
  public static boolean directive(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "directive")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, DIRECTIVE, "<directive>");
    r = directive_0(b, l + 1);
    if (!r) r = directive_1(b, l + 1);
    if (!r) r = directive_2(b, l + 1);
    if (!r) r = directive_3(b, l + 1);
    if (!r) r = directive_4(b, l + 1);
    if (!r) r = directive_5(b, l + 1);
    if (!r) r = directive_6(b, l + 1);
    if (!r) r = directive_7(b, l + 1);
    if (!r) r = consumeToken(b, DIR_O);
    if (!r) r = consumeToken(b, DIR_X);
    if (!r) r = directive_10(b, l + 1);
    if (!r) r = directive_11(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // DIR_L args_dir_L
  private static boolean directive_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "directive_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, DIR_L);
    r = r && args_dir_L(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // DIR_E args_dir_E
  private static boolean directive_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "directive_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, DIR_E);
    r = r && args_dir_E(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // DIR_EO args_dir_EO
  private static boolean directive_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "directive_2")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, DIR_EO);
    r = r && args_dir_EO(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // DIR_ES args_dir_ES
  private static boolean directive_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "directive_3")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, DIR_ES);
    r = r && args_dir_ES(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // DIR_EV args_dir_EV
  private static boolean directive_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "directive_4")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, DIR_EV);
    r = r && args_dir_EV(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // DIR_T args_dir_T
  private static boolean directive_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "directive_5")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, DIR_T);
    r = r && args_dir_T(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // DIR_S args_dir_S
  private static boolean directive_6(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "directive_6")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, DIR_S);
    r = r && args_dir_S(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // DIR_C args_dir_C
  private static boolean directive_7(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "directive_7")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, DIR_C);
    r = r && args_dir_C(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // DIR_F args_dir_F
  private static boolean directive_10(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "directive_10")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, DIR_F);
    r = r && args_dir_F(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // DIR_R args_dir_R
  private static boolean directive_11(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "directive_11")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, DIR_R);
    r = r && args_dir_R(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // COMMENT
  public static boolean dummy(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "dummy")) return false;
    if (!nextTokenIs(b, COMMENT)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMENT);
    exit_section_(b, m, DUMMY, r);
    return r;
  }

  /* ********************************************************** */
  // (OP_PLUS | OP_MINUS | OP_NOT) expr |
  //     term (xop expr)*
  static boolean expr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expr")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, null, "<expression>");
    r = expr_0(b, l + 1);
    if (!r) r = expr_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (OP_PLUS | OP_MINUS | OP_NOT) expr
  private static boolean expr_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expr_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = expr_0_0(b, l + 1);
    r = r && expr(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // OP_PLUS | OP_MINUS | OP_NOT
  private static boolean expr_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expr_0_0")) return false;
    boolean r;
    r = consumeToken(b, OP_PLUS);
    if (!r) r = consumeToken(b, OP_MINUS);
    if (!r) r = consumeToken(b, OP_NOT);
    return r;
  }

  // term (xop expr)*
  private static boolean expr_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expr_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = term(b, l + 1);
    r = r && expr_1_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (xop expr)*
  private static boolean expr_1_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expr_1_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!expr_1_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "expr_1_1", c)) break;
    }
    return true;
  }

  // xop expr
  private static boolean expr_1_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expr_1_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = xop(b, l + 1);
    r = r && expr(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }
